--- a/slam_gmapping/package.xml
+++ b/slam_gmapping/package.xml
@@ -23,6 +23,7 @@
     <depend>tf2_geometry_msgs</depend>
     <depend>message_filters</depend>
     <depend>rclcpp</depend>
+    <depend>rclcpp_components</depend>
     <depend>sensor_msgs</depend>
     <depend>visualization_msgs</depend>
     <depend>openslam_gmapping</depend>
